<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/user_list_item_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_list_item_card_view"
        android:layout_width="@dimen/user_list_item_picture_size"
        android:layout_height="@dimen/user_list_item_picture_size"
        android:layout_marginStart="@dimen/user_list_item_margin"
        android:layout_marginLeft="@dimen/user_list_item_margin"
        app:cardCornerRadius="@dimen/user_list_item_picture_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/user_list_item_picture"
            android:layout_width="@dimen/user_list_item_picture_size"
            android:layout_height="@dimen/user_list_item_picture_size"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_picture_description"
            />

    </androidx.cardview.widget.CardView>






    <TextView
        android:id="@+id/user_list_full_name"
        android:layout_width="@dimen/user_list_item_text_length"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/user_list_item_margin"
        android:layout_marginLeft="@dimen/user_list_item_margin"
        android:textSize="@dimen/user_list_item_text_size"
        android:ellipsize="end"
        android:maxLines="1"
        android:gravity="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_list_item_card_view"
        tools:text="@string/default_text"
        tools:ignore="RtlHardcoded" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"/>


    <TextView
        android:id="@+id/user_list_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/user_list_phone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/user_list_phone"
        android:textSize="@dimen/user_list_item_text_size_small"
        tools:text="@string/default_age"
        />

    <TextView
        android:id="@+id/user_list_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/user_list_item_margin"
        android:layout_marginLeft="@dimen/user_list_item_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_list_age"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintHorizontal_bias="0.6"
        android:textSize="@dimen/user_list_item_text_size_small"
        tools:text="@string/default_phone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>